--- a/css/style.css
+++ b/css/style.css
@@ -220,31 +220,29 @@ select {
 }
 
 @media (min-width: 576px) {
-  .container {
-      padding-left: 20px;
-      padding-right: 20px;
+    .container {
+        padding-left: 20px;
+        padding-right: 20px;
 
-  }
+    }
 }
+
 @media (min-width: 768px) {
-  . container {
-      padding-left: 20px;
-      padding-right: 20px;
-  }
+
 }
+
 @media (min-width: 992px) {
-   .container {
-       padding-left: 20px;
-       padding-right: 20px;
-  }
+
 }
+
 @media (min-width: 1200px) {
 
 }
+
 @media (min-width: 1400px) {
 
-
 }
+
 .row {
     display: flex;
     flex-wrap: wrap;
@@ -506,9 +504,11 @@ header*/
         display: none;
     }
 }
+
 @media (min-width: 768px) {
 
 }
+
 .search input {
     background-color: #646464;
 }
@@ -569,7 +569,6 @@ header-button*/
 
 }
 
-
 .header-button a {
     font-weight: 400;
     font-size: 14px;
@@ -599,6 +598,7 @@ header-button*/
     content: "";
 
 }
+
 /*---media---*/
 @media (max-width: 976px) {
     .header-button__catalog {
@@ -607,6 +607,7 @@ header-button*/
         position: relative;
 
     }
+
     .basket-text {
         display: none;
     }
@@ -615,6 +616,7 @@ header-button*/
         display: none;
 
     }
+
     .language-selection {
         display: none;
     }
@@ -627,15 +629,47 @@ header-button*/
         display: none;
     }
 }
-@media (max-width: 768px) {
+
+@media (max-width: 1130px) {
+    .header-button__catalog {
+        background: #59D230;
+        display: inline;
+        position: relative;
+
+    }
+
+    .basket-text {
+        display: none;
+    }
+
+    .header-button ul {
+        display: none;
+
+    }
+
+    .language-selection {
+        display: none;
+    }
+
+    .info {
+        order: 1;
+    }
+
+    .info-text {
+        display: none;
+    }
+}
 
 }
+
 @media (min-width: 992px) {
 
 }
+
 @media (min-width: 1200px) {
 
 }
+
 @media (min-width: 1400px) {
 
 }
@@ -658,6 +692,7 @@ section banner*/
     position: relative;
     width: 70%;
     max-width: 785px;
+    padding: 0 10px;
 }
 
 .banner-col-dwo {
@@ -701,8 +736,6 @@ section banner*/
     text-transform: uppercase;
 
 }
-
-
 
 .banner-title span {
     color: #59D230;
@@ -779,7 +812,7 @@ section banner*/
 
     .banner-col-dwo {
         margin-top: 5px;
-        width: 100%;
+        width: 95%;
         align-self: center;
     }
 
@@ -800,16 +833,34 @@ section banner*/
     .banner-title p {
         font-size: 21px;
     }
+
+    .banner-title button {
+        padding: 10px 81px;
+        margin-top: -10px;
+    }
+
+    .banner-title__leftOne button {
+        padding: 7px 14px;
+        margin-top: -18px;
+    }
+
+    .banner-title__leftOne {
+        padding: 7px;
+    }
 }
+
 @media (max-width: 768px) {
 
 }
+
 @media (max-width: 992px) {
 
 }
+
 @media (max-width: 1200px) {
 
 }
+
 @media (max-width: 1400px) {
 
 }
@@ -838,7 +889,7 @@ Product Catalog*/
 }
 
 .productCatalog-col img {
-    padding-bottom: 30px;
+    padding: 20px;
     max-width: 127px;
     max-height: 127px;
 }
@@ -881,22 +932,32 @@ Product Catalog*/
         margin-right: auto;
         margin-left: auto;
     }
+
     .productCatalog-col {
         width: 40%;
     }
+
+    .productCatalog-title {
+        font-size: 20px;
+    }
 }
+
 @media (min-width: 768px) {
 
 }
+
 @media (min-width: 992px) {
 
 }
+
 @media (min-width: 1200px) {
 
 }
+
 @media (min-width: 1400px) {
 
 }
+
 /*--------------------------------------------
 Brand*/
 .brand {
@@ -919,7 +980,7 @@ Brand*/
 }
 
 .brand-col {
-
+    padding: 0 8px;
 }
 
 .brand-title span {
@@ -935,25 +996,30 @@ Brand*/
 /*---media---*/
 @media (max-width: 576px) {
     .brand {
-        max-width:576px;
+        max-width: 576px;
         padding-top: 40px;
         width: 100%;
         overflow: hidden;
     }
+
     .brand-prev-icon {
         position: absolute;
         right: 7px;
     }
 }
+
 @media (min-width: 768px) {
 
 }
+
 @media (min-width: 992px) {
 
 }
+
 @media (min-width: 1200px) {
 
 }
+
 @media (min-width: 1400px) {
 
 }
@@ -976,16 +1042,18 @@ gotoCatalog*/
     max-width: 990px;
     padding: 20px;
 }
+
 .gotoCatalog-col h1 {
-  font-size: 56px;
-    text-transform:uppercase;
+    font-size: 56px;
+    text-transform: uppercase;
 }
+
 .gotoCatalog-col h2 {
     text-transform: uppercase;
     font-size: 21px;
 }
 
-.gotoCatalog-col p,h1,h2 {
+.gotoCatalog-col p, h1, h2 {
     color: white;
 }
 
@@ -1007,33 +1075,39 @@ gotoCatalog*/
         margin-right: auto;
         margin-left: auto;
     }
+
     .gotoCatalog-col {
         text-align: center;
         width: 100%;
         max-width: 576px;
     }
+
     .gotoCatalog-col h1 {
         font-size: 30px;
-        text-transform:uppercase;
+        text-transform: uppercase;
     }
+
     .gotoCatalog-col h2 {
-        font-size:14px;
-        text-transform:uppercase;
+        font-size: 14px;
+        text-transform: uppercase;
     }
 }
+
 @media (min-width: 768px) {
 
 }
+
 @media (min-width: 992px) {
 
 }
+
 @media (min-width: 1200px) {
 
 }
+
 @media (min-width: 1400px) {
 
 }
-
 
 /*--------------------------------------------
 promotional offers*/
@@ -1057,6 +1131,11 @@ promotional offers*/
 
 .promoOffers-product {
     max-width: 255px;
+    padding: 10px;
+}
+
+.promooffers-product__image {
+    overflow: hidden;
 }
 
 .promoOffers-product__title {
@@ -1149,20 +1228,35 @@ promotional offers*/
 
 /*---media---*/
 @media (max-width: 576px) {
-    .promoOffers-title span{
+    .promoOffers-title span {
         font-size: 16px;
         text-align: center;
     }
+
+    .promoOffers-title {
+        justify-content: center;
+        margin-right: 10px;
+
+    }
+
+    .promoOffers .row {
+        padding: 20px;
+
+    }
 }
+
 @media (min-width: 768px) {
 
 }
+
 @media (min-width: 992px) {
 
 }
+
 @media (min-width: 1200px) {
 
 }
+
 @media (min-width: 1400px) {
 
 }
@@ -1199,7 +1293,7 @@ ourAdvantages*/
     background: #FFFFFF;
     border: 1px solid #383838;
     box-shadow: 19px 19px 0px #101010;
-    margin: 20px;
+    margin: 12px;
     display: flex;
 }
 
@@ -1232,21 +1326,43 @@ ourAdvantages*/
 
 }
 
-
 /*---media---*/
-@media (min-width: 576px) {
+@media (max-width: 576px) {
+    .page-up {
+        display: none;
+    }
+
+    .ourAdvantages-title {
+        font-size: 21px;
+    }
+
+    .ourAdvantages-col__figure {
+        margin: 0px 10px;
+    }
+
+    .ourAdvantages-col__content {
+
+        font-size: 12px;
+        font-weight: 400;
+        line-height: 15px;
+
+    }
 
 }
-@media (min-width: 768px) {
+
+@media (max-width: 768px) {
 
 }
-@media (min-width: 992px) {
+
+@media (max-width: 992px) {
 
 }
-@media (min-width: 1200px) {
+
+@media (max-width: 1200px) {
 
 }
-@media (min-width: 1400px) {
+
+@media (max-width: 1400px) {
 
 }
 
@@ -1255,12 +1371,13 @@ contactUs*/
 
 .contactUs {
     padding-top: 100px;
+
 }
 
-.contactUs .row {
-
+.contactUs-row {
+    display: flex;
+    justify-content: space-between;
     max-width: 1110px;
-    max-height: 330px;
     background-color: #59D230;
 }
 
@@ -1313,282 +1430,347 @@ contactUs*/
     color: #59D230;
 }
 
+
 .contactUs-col__img {
     position: relative;
-
+    max-width: 563px;
+    max-height: 408px;
 }
 
-.contactUs-col__img img {
+.contactUs-col__img  img{
     position: absolute;
-    top: -113px;
-    right: 0;
+    top: -106px;
+    right: 77px;
+    max-width: 563px;
+    max-height: 408px;
 }
 
-/*---media---*/
-@media (min-width: 576px) {
-
-}
-@media (min-width: 768px) {
-
-}
-@media (min-width: 992px) {
-
-}
-@media (min-width: 1200px) {
-
-}
-@media (min-width: 1400px) {
-
-}
-
-/*--------------------------------------------
-comment*/
-.comment {
-    padding-top: 50px;
-}
-
-.comment .col {
-    position: relative;
-    background: #FFFFFF;
-    border: 1px solid #D9D9D9;
-    padding: 20px;
-    max-width: 350px;
-    width: 100%;
-    margin: 12px;
-}
-
-.comment-title {
-    max-width: 97%;
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    font-size: 21px;
-    font-weight: 700;
-    line-height: 27px;
-    padding: 5px 0;
-
-}
-
-.comment-pref {
-    display: flex;
-    width: 50px;
-    justify-content: space-around;
-}
-
-.comment-name {
-    font-size: 16px;
-    font-weight: 700;
-    line-height: 21px;
-    letter-spacing: 0em;
-}
-
-.comment-content {
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 22px;
-    letter-spacing: 0em;
-}
-
-.comment-date {
-    position: relative;
-    text-align: end;
-    font-size: 10px;
-    font-weight: 400;
-    line-height: 13px;
-    letter-spacing: 0em;
-    color: #939393;
-}
-
-.comment-button {
-    text-align: center;
-}
-
-.comment-button button {
-    border-color: #59D230;
-    padding: 10px 50px;
-    position: relative;
-}
-
-.comment-button svg {
-    position: absolute;
-    display: block;
-    top: 16px;
-    left: 20px;
-}
-
-.comment-rating {
-    position: absolute;
-    right: 30px;
-    top: 16px;
-}
-
-.comment-rating svg {
-    position: relative;
-    right: 0;
-    top: 0;
-}
-
-.comment-rating div {
-    position: absolute;
-    right: 18px;
-    top: 0;
-}
-
-.pref-left {
-    margin-right: 10px;
-}
-
-/*---media---*/
-@media (min-width: 576px) {
-
-}
-@media (min-width: 768px) {
-
-}
-@media (min-width: 992px) {
-
-}
-@media (min-width: 1200px) {
-
-}
-@media (min-width: 1400px) {
-
-}
-/*--------------------------------------------
-blog*/
-.blog {
-    padding-top: 50px;
-}
-
-.blog .row {
-    border-top: 1px solid #D9D9D9;
-    border-bottom: 1px solid #D9D9D9;
-    padding: 20px 0;
-}
-
-.blog-title {
-    font-size: 21px;
-    font-weight: 700;
-    line-height: 27px;
-}
-
-.blog-col {
-    display: flex;
-}
-
-.blog-img {
-    padding: 0 5px;
-}
-
-.blog-title span {
-    font-size: 12px;
-    font-weight: 400;
-    color: #6122B1;
-}
-
-.blog-content {
-
-}
-
-.blog-col__title {
-    max-width: 150px;
-    font-family: PT Sans;
-    font-size: 12px;
-    font-weight: 700;
-    line-height: 14px;
-}
-
-.blog-col__date {
-    color: #383838;
-    font-family: PT Sans;
-    font-size: 10px;
-    font-weight: 400;
-    line-height: 12px;
-    padding-top: 5px;
-}
-
-/*---media---*/
-@media (min-width: 576px) {
-
-}
-@media (min-width: 768px) {
-
-}
-@media (min-width: 992px) {
-
-}
-@media (min-width: 1200px) {
-
-}
-@media (min-width: 1400px) {
-
-}
-/*--------------------------------------------
-footer*/
-.footer {
-    padding-top: 20px;
-    margin-top: 50px;
-    width: 100%;
-    background-color: #383838;
-    color: white;
-    width: 100%;
-}
-
-.footer li {
-    line-height: 2.5;
-}
-
-.footer-logo__content {
-    max-width: 191px;
-    width: 100%;
-    color: #939393;
-    font-size: 12px;
-    font-weight: 400;
-    padding-top: 10px;
-}
-
-.li-activ {
-    color: #59D230;
-    padding-bottom: 10px;
-    text-transform: uppercase;
-}
-
-.main-color-gray {
-    color: #939393;
-    font-weight: 400;
-    font-size: 10px;
-}
-
-.lh1 {
-    line-height: 1;
-}
-
-.footer-button {
-    font-weight: 400;
-    font-size: 12px;
-    display: flex;
-    justify-content: space-between;
-    border-top: 1px solid #939393;
-    padding: 10px 0;
-    color: #939393;
-}
 
 /*---media---*/
 @media (max-width: 576px) {
-    .footer .row {
-        flex-direction: column;
-        align-items: center;
+    .contactUs-title {
+        text-transform: uppercase;
+        font-size: 21px;
+
+    }
+
+    .contactUs-col__img img {
+        position: absolute;
+        top: -51px;
+        right: 77px;
+        max-width: 254px;
+        max-height: 175px;
+    }
+
+    .contactUs-row {
+        position: relative;
+    }
+
+    .contactUs-col {
+        padding-top: 130px;
     }
 }
-@media (max-width: 768px) {
+    @media (min-width: 768px) {
 
-}
-@media (max-width: 992px) {
+    }
 
-}
-@media (max-width: 1200px) {
+    @media (min-width: 992px) {
 
-}
-@media (max-width: 1400px) {
+    }
 
-}
+    @media (min-width: 1200px) {
+
+    }
+
+    @media (min-width: 1400px) {
+
+    }
+
+    /*--------------------------------------------
+    comment*/
+    .comment {
+        padding-top: 50px;
+    }
+
+    .comment .col {
+        position: relative;
+        background: #FFFFFF;
+        border: 1px solid #D9D9D9;
+        padding: 20px;
+        max-width: 350px;
+        width: 100%;
+        margin: 12px;
+    }
+
+    .comment-title {
+        max-width: 97%;
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        font-size: 21px;
+        font-weight: 700;
+        line-height: 27px;
+        padding: 5px 0;
+
+    }
+
+    .comment-pref {
+        display: flex;
+        width: 50px;
+        justify-content: space-around;
+    }
+
+    .comment-name {
+        font-size: 16px;
+        font-weight: 700;
+        line-height: 21px;
+        letter-spacing: 0em;
+    }
+
+    .comment-content {
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 22px;
+        letter-spacing: 0em;
+    }
+
+    .comment-date {
+        position: relative;
+        text-align: end;
+        font-size: 10px;
+        font-weight: 400;
+        line-height: 13px;
+        letter-spacing: 0em;
+        color: #939393;
+    }
+
+    .comment-button {
+        text-align: center;
+    }
+
+    .comment-button button {
+        border-color: #59D230;
+        padding: 10px 50px;
+        position: relative;
+    }
+
+    .comment-button svg {
+        position: absolute;
+        display: block;
+        top: 16px;
+        left: 20px;
+    }
+
+    .comment-rating {
+        position: absolute;
+        right: 30px;
+        top: 16px;
+    }
+
+    .comment-rating svg {
+        position: relative;
+        right: 0;
+        top: 0;
+    }
+
+    .comment-rating div {
+        position: absolute;
+        right: 18px;
+        top: 0;
+    }
+
+    .pref-left {
+        margin-right: 10px;
+    }
+
+    /*---media---*/
+    @media (max-width: 576px) {
+        .comment-col {
+            display: none;
+        }
+
+        .comment-title {
+            max-width: 95%;
+            justify-content: center;
+        }
+
+        .pref-left {
+            margin-left: 40px;
+        }
+    }
+
+    @media (min-width: 768px) {
+
+    }
+
+    @media (min-width: 992px) {
+
+    }
+
+    @media (min-width: 1200px) {
+
+    }
+
+    @media (min-width: 1400px) {
+
+    }
+
+    /*--------------------------------------------
+    blog*/
+    .blog {
+        padding-top: 50px;
+    }
+
+    .blog .row {
+        border-top: 1px solid #D9D9D9;
+        border-bottom: 1px solid #D9D9D9;
+        padding: 20px 0;
+    }
+
+    .blog-title {
+        font-size: 21px;
+        font-weight: 700;
+        line-height: 27px;
+    }
+
+    .blog-col {
+        display: flex;
+    }
+
+    .blog-img {
+        padding: 0 5px;
+    }
+
+    .blog-title span {
+        font-size: 12px;
+        font-weight: 400;
+        color: #6122B1;
+    }
+
+    .blog-content {
+
+    }
+
+    .blog-col__title {
+        max-width: 150px;
+        font-family: PT Sans;
+        font-size: 12px;
+        font-weight: 700;
+        line-height: 14px;
+    }
+
+    .blog-col__date {
+        color: #383838;
+        font-family: PT Sans;
+        font-size: 10px;
+        font-weight: 400;
+        line-height: 12px;
+        padding-top: 5px;
+    }
+
+    /*---media---*/
+    @media (max-width: 576px) {
+        .blog .row {
+            flex-direction: column;
+        }
+
+        .blog-col {
+            margin-top: 12px;
+        }
+
+    }
+
+    @media (min-width: 768px) {
+
+    }
+
+    @media (min-width: 992px) {
+
+    }
+
+    @media (min-width: 1200px) {
+
+    }
+
+    @media (min-width: 1400px) {
+
+    }
+
+    /*--------------------------------------------
+    footer*/
+    .footer {
+        padding-top: 20px;
+        margin-top: 50px;
+        width: 100%;
+        background-color: #383838;
+        color: white;
+        width: 100%;
+    }
+
+    .footer li {
+        line-height: 2.5;
+    }
+
+    .footer-logo__content {
+        max-width: 191px;
+        width: 100%;
+        color: #939393;
+        font-size: 12px;
+        font-weight: 400;
+        padding-top: 10px;
+    }
+
+    .li-activ {
+        color: #59D230;
+        padding-bottom: 10px;
+        text-transform: uppercase;
+    }
+
+    .main-color-gray {
+        color: #939393;
+        font-weight: 400;
+        font-size: 10px;
+    }
+
+    .lh1 {
+        line-height: 1;
+    }
+
+    .footer-button {
+        font-weight: 400;
+        font-size: 12px;
+        display: flex;
+        justify-content: space-between;
+        border-top: 1px solid #939393;
+        padding: 10px 0;
+        color: #939393;
+    }
+
+    /*---media---*/
+    @media (max-width: 576px) {
+        footer {
+            padding-left: 10px;
+            padding-right: 10px;
+        }
+
+        .footer .row {
+            flex-direction: column;
+            align-items: center;
+        }
+    }
+
+    @media (max-width: 768px) {
+
+    }
+
+    @media (max-width: 992px) {
+
+    }
+
+    @media (max-width: 1200px) {
+
+    }
+
+    @media (max-width: 1400px) {
+
+    }
